src/objects/ITOP_Device__c.object
<CustomObject>
    <description>Collection of Lilly supported devices with specifications, model, type, manufacturer</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Automatically configured description with all device information/titles</description>
        <formula>Product_Line__r.Manufacturer__r.Name + &apos; &apos; + 
 Product_Line__r.Name + &apos; &apos; + 
  Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>Model Picture</inlineHelpText>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically set by trigger to select to product line&apos;s manufacturer instance.</description>
        <label>Manufacturer</label>
        <referenceTo>ITOP_Device_Manufacturer__c</referenceTo>
        <relationshipLabel>ITOP Devices</relationshipLabel>
        <relationshipName>ITOP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Device Model Information.  Number, Model, Name, etc. ex - iphone 6s would be &quot;6s&quot;</description>
        <label>Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITOP Device Product Line</label>
        <referenceTo>ITOP_Device_Product_Line__c</referenceTo>
        <relationshipLabel>ITOP Devices</relationshipLabel>
        <relationshipName>ITOP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>&apos;Choose which IT On-Point location to send your ticket to:&apos;</formula>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <label>ITOP Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>